@@ -26,10 +26,13 @@
 
     <bean id="helloService" class="ir.ac.iust.dml.kg.knowledge.store.services.hello.HelloServiceImpl"/>
     <bean id="v1TriplesServices" class="ir.ac.iust.dml.kg.knowledge.store.services.v1.TriplesServices"/>
+    <bean id="v1ExpertServices" class="ir.ac.iust.dml.kg.knowledge.store.services.v1.ExpertServices"/>
     <bean id="v1MappingServices" class="ir.ac.iust.dml.kg.knowledge.store.services.v1.MappingServices"/>
     <bean id="v1MappingExpertServices" class="ir.ac.iust.dml.kg.knowledge.store.services.v1.MappingExpertServices"/>
-    <bean id="v1ExpertServices" class="ir.ac.iust.dml.kg.knowledge.store.services.v1.ExpertServices"/>
     <bean id="v2OntologyServices" class="ir.ac.iust.dml.kg.knowledge.store.services.v2.impl.OntologyServices"/>
+    <bean id="v2MappingServices" class="ir.ac.iust.dml.kg.knowledge.store.services.v2.impl.MappingServices"/>
+    <bean id="v2MappingExpertServices"
+          class="ir.ac.iust.dml.kg.knowledge.store.services.v2.impl.MappingExpertServices"/>
 
     <jaxws:endpoint implementor="#helloService" address="/ws/v0"/>
     <jaxws:endpoint implementor="#v1TriplesServices" address="/ws/v1/triples">
@@ -37,12 +40,12 @@
             <ref bean="commonValidationFeature"/>
         </jaxws:features>
     </jaxws:endpoint>
-    <jaxws:endpoint implementor="#v1MappingServices" address="/ws/v1/mappings">
+    <jaxws:endpoint implementor="#v1ExpertServices" address="/ws/v1/experts">
         <jaxws:features>
             <ref bean="commonValidationFeature"/>
         </jaxws:features>
     </jaxws:endpoint>
-    <jaxws:endpoint implementor="#v1ExpertServices" address="/ws/v1/experts">
+    <jaxws:endpoint implementor="#v1MappingServices" address="/ws/v1/mappings">
         <jaxws:features>
             <ref bean="commonValidationFeature"/>
         </jaxws:features>
@@ -57,14 +60,26 @@
             <ref bean="commonValidationFeature"/>
         </jaxws:features>
     </jaxws:endpoint>
+    <jaxws:endpoint implementor="#v2MappingServices" address="/ws/v2/mappings">
+        <jaxws:features>
+            <ref bean="commonValidationFeature"/>
+        </jaxws:features>
+    </jaxws:endpoint>
+    <jaxws:endpoint implementor="#v2MappingExpertServices" address="/ws/v2/mappings/experts">
+        <jaxws:features>
+            <ref bean="commonValidationFeature"/>
+        </jaxws:features>
+    </jaxws:endpoint>
     <jaxrs:server address="/rs">
         <jaxrs:serviceBeans>
             <ref bean="helloService"/>
             <ref bean="v1TriplesServices"/>
-            <ref bean="v1MappingServices"/>
             <ref bean="v1ExpertServices"/>
+            <ref bean="v1MappingServices"/>
             <ref bean="v1MappingExpertServices"/>
             <ref bean="v2OntologyServices"/>
+            <ref bean="v2MappingServices"/>
+            <ref bean="v2MappingExpertServices"/>
         </jaxrs:serviceBeans>
         <jaxrs:features>
             <bean class="org.apache.cxf.jaxrs.swagger.Swagger2Feature"/>
